Address the comment

--- a/downloads/1.2.x-release-notes/1.2.58.md
+++ b/downloads/1.2.x-release-notes/1.2.58.md
@@ -11,7 +11,7 @@ active: 1.2.58
 
 <!-- The jBallerina 1.2.58 patch release improves upon the <PREVIOUS_RELEASE_VERSION> release by addressing a few security improvements. -->
 
-<!-- The jBallerina 1.2.58 patch release improves upon the <PREVIOUS_RELEASE_VERSION> release by addressing a few security improvements. -->
+The jBallerina 1.2.58 patch release improves upon the 1.2.57 release by addressing a few security improvements.
 
 You can use the update tool to update to jBallerina 1.2.58 as follows.
 
